Hygieia_UI/UI/src/app/css/projectmapp.less
@import (reference) 'variables';
@import (reference) 'mixins';

.project-map-container{
	background: -webkit-linear-gradient(right, #FBFDFE, #A0C4E3) !important;
    background: -o-linear-gradient(left, #FBFDFE, #A0C4E3) !important;
    background: -moz-linear-gradient(left, #FBFDFE, #A0C4E3) !important;
    background: linear-gradient(to left, #FBFDFE, #A0C4E3) !important;
    overflow: scroll;
    height: 700px;
}
.project-map-blue-bar{
    height: 30px;
    width:100%;
    background: -webkit-linear-gradient(right,#24394C, #7ABEF8 ) !important;   
    background: -o-linear-gradient(left, #24394C, #7ABEF8 ) !important; 
    background: -moz-linear-gradient(left, #24394C, #7ABEF8 ) !important; 
    background: linear-gradient(to left, #24394C, #7ABEF8 ) !important;
}
.project-map-hamburger{
    margin-top:17px !important;
}
.project-map-ed{
    margin-top:12px;
}
.project-map-edText{
    margin-left: 0.9%;
    margin-top:17px;
}
.project-map-signout-mainParent{
    margin-bottom:8px !important;
    margin-top: 5px !important;
    margin-right: -138px !important;
}
.project-map-firstChild{
    width: 127px;
    padding-top: 40px;
    padding-left: 23px;
    margin-left: -80px;
    position: absolute;
}
.project-map-black-header{
    height: 30px;
    width:100%;
    background:#000;
}
.project-map-firstChild{
    height: 100%;
    width:100%;
}
.project-map-secondChild{
    padding-left: 17%;
    padding-top: 2.6%;
}
.project-map-search-bar{
    border-radius: 0px;
    width:60%;
    
}
.project-map-add-btn{
    margin-top:9.7%;
    background: #004073 !important;
    border:1px solid #004073 !important;
    border-radius: 2px !important;
}
.project-map-list-header{
    color: #1a1a1a;
    font-size: 15px;
}
.project-map-bar-prop{
    background: white;
    margin-top: 8px;
    margin-left: 0px;
    margin-right: 0px;
    box-shadow: rgb(136, 136, 136) 1px 2px 1px;
    border-left: 6px solid #96c356;
    padding: 14px;
    color: #737373;
    font-size: 13px;
}
.project-map-list-data{
    cursor: pointer;
    max-width: 220px;
    text-overflow: ellipsis;
    overflow: hidden;
    
}
.project-map-crud-icons{
    width: 20px;
    height:20px;
    cursor: pointer;
}
.project-map-padding-icons{
    margin-left: 6px;
}
@media (min-width: 1200px) {
  .seven-cols .col-md-1,
  .seven-cols .col-sm-1,
  .seven-cols .col-lg-1 {
    width: 14.285714285714285714285714285714%;
    *width: 14.285714285714285714285714285714%;
  }
}
.set-width-input{
    width:120px !important;
}

.panel-up{
    transition: all 0.3s;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -ms-transition: all 0.3s;
    -o-transition: all 0.3s;
}

.panel-up:hover{
    transform: translateY(-7px);
    box-shadow: 0 6px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);   
}

.panel.panel-primary > .panel-heading {
    background-color: #4DB6AC;
}

//signout dropdown//
.dropbtn {
    background-color: #4CAF50;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

.dropdown-logout {
    position: relative;
    display: inline-block;
    
}

.dropdown-contents {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-contents a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-contents a:hover {background-color: #f1f1f1}

.dropdown-logout:hover .dropdown-contents {
    display: block;
}

.dropdown-logout:hover .dropbtn {
    background-color: #3e8e41;
}

